# Leslie-ChessEngine

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: board.cpp  board.h  engine.cpp  engine.h  lichess_shell.cpp  lichess_shell.h  magic.cpp  magic.h  main.cpp  move.cpp  move.h  options.h  pieces_container.cpp  pieces_container.h  position.cpp  position.h  return_codes.h  types.h  uci.cpp  uci.h
tests/: KNP_move_test.cpp  advanced_test.cpp  bishop_move_tests.cpp  bishop_test.cpp  king_move_test.cpp  king_test.cpp  knight_move_tests.cpp  knight_test.cpp  pawn_move_tests.cpp  pawn_test.cpp  rays_test.cpp  rook_move_tests.cpp  rook_test.cpp  tests.cpp  tests.h
